Issue: 18 - Unlink reports if they don't exist.  Note for backwards compatibility with browsers that don't support XMLHttpRequest(), the links are initially drawn, then removed if the reports aren't there.  This should be invisible on modern browsers.

--- a/resources/web/iphone.css
+++ b/resources/web/iphone.css
@@ -156,7 +156,7 @@ body {
 table {
 	table-layout: fixed;	
 }
-a {
+a[href] {
 	display: inline-block;
 	padding-right: 13px;
 	background:transparent url(link.png) center right no-repeat;
